<resources>
    <string name="app_name">Easy Request</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register_text">No account yet? Create one</string>
    <string name="register">Create</string>
    <string name="obligatory_field">Obligatory field</string>
    <string name="passwordRepeat">Repeate password</string>
    <string name="password_not_equals">The passwords are different</string>
    <string name="networkError">Network error</string>
    <string name="requestError">Request error</string>
    <string name="pleaseConfirmUser">please confirm the user from the mail</string>
    <string name="title_provider_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    
    <string name="product">Product</string>
    <string name="client">Client</string>
    <string name="order">Order</string>
    <string name="messages">Messages</string>
    <string name="licenses">Licenses</string>
    <string name="directions">Directions</string>
    <string name="profile">Profile</string>
    <string name="info">Information</string>
    <string name="setting">Settings</string>

</resources>
