<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="outlet.com.easyrequest.Views.LoginView"
    android:gravity="bottom"
    android:background="@drawable/gradient_login">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:layout_marginBottom="100dp"
    >

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logopart2"
        android:visibility="invisible"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logopart1"
        android:visibility="invisible"/>

</android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textColorHint="#C5C7D6"
            android:padding="30px" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="#C5C7D6"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="30px" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="@string/login" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_text"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            />


    </android.support.v7.widget.LinearLayoutCompat>



</android.support.v7.widget.LinearLayoutCompat>
